# downlink

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt
downlink/: __init__.py  cli.py
scripts/: downlink
