[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "downlink"
version = "0.1.0"
description = "Playwright-based webpage-to-markdown downloader (downlink)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
authors = [
  { name = "Leigh Klotz", email = "klotz@klotz.me" }
]
dependencies = [
  "playwright>=1.40.0",
  "markdownify>=0.9.0"
]

[project.scripts]
downlink = "downlink.cli:main"
